<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--<string name="app_name">绿豆芽</string>-->
    <string name="version">V1.0</string>
    <string name="toast_server_error">服务器异常</string>
    <!--登录界面-->
    <string name="title_login">登录</string>
    <string name="login_toast_01">请输入账号</string>
    <string name="login_toast_02">请输入密码</string>
    <string name="login_toast_03">请输入正确的手机号</string>
    <string name="login_toast_04">请输验证码</string>
    <string name="login_toast_05">请输入手机号</string>
    <string name="login_01">账号</string>
    <string name="login_02">请输入手机号</string>
    <string name="login_03">密码</string>
    <string name="login_04">请输入密码</string>
    <string name="login_05">验证码</string>
    <string name="login_06">请输入验证码</string>
    <string name="login_07">记住密码</string>
    <string name="login_08">忘记密码</string>
    <string name="login_09">手机验证码登录</string>
    <string name="login_10">账号密码登录</string>
    <string name="login_11">获取验证码</string>
    <string name="login_12">登录</string>
    <string name="login_15">手机号</string>

    <string name="title_forget">忘记密码</string>
    <string name="title_forget_2">修改密码</string>
    <string name="forget_01">手机号</string>
    <string name="forget_02">输入验证码</string>
    <string name="forget_03">输入新密码</string>
    <string name="forget_04">再输入一次新密码</string>
    <string name="forget_05">提交</string>
    <string name="forget_toast_01">请输入手机号</string>
    <string name="forget_toast_02">请输入验证码</string>
    <string name="forget_toast_03">请输入新密码</string>
    <string name="forget_toast_04">请输入确认密码</string>
    <string name="forget_toast_05">新密码与确认密码不一致</string>

    <string name="title_choose">选择区号</string>
    <string name="area_01">搜索</string>
    <string name="title_helper">帮助中心</string>
    <string name="title_course_center">课程中心</string>
    <string name="title_teacher_list">教师列表</string>
    <string name="teacher_list_01">账号：</string>
    <string name="title_personal_center">个人中心</string>
    <string name="personal_center_01">个人资料</string>
    <string name="personal_center_02">我的课程</string>
    <string name="personal_center_03">我的钱包</string>
    <string name="personal_center_04">设置</string>
    <string name="personal_center_05">退出登录</string>
    <string name="personal_01">账号</string>
    <string name="personal_02">修改密码</string>
    <string name="personal_03">真实姓名</string>
    <string name="personal_04">电话</string>
    <string name="personal_05">昵称</string>
    <string name="personal_06">性别</string>
    <string name="personal_07">年龄</string>
    <string name="personal_08">职业</string>
    <string name="personal_09">会员有效期</string>
    <string name="personal_11">点击查看</string>
    <string name="recharge_01">请输入要充值的金额</string>
    <string name="recharge_02">元</string>
    <string name="recharge_03">请输入充值金额</string>
    <string name="recharge_04">确认充值</string>
    <string name="cash_01">请输入姓名</string>
    <string name="cash_02">请输入支付宝账号</string>
    <string name="cash_03">请输入要提现的金额</string>
    <string name="cash_04">确认提现</string>
    <string name="cash_toast_01">请输入姓名</string>
    <string name="cash_toast_02">请输入支付宝账号</string>
    <string name="cash_toast_03">请输入提现金额</string>
    <string name="title_recommend_01">课程推荐</string>
    <string name="title_recommend_02">特色课程</string>
    <string name="recommend_01">主题</string>
    <string name="recommend_02">课程</string>
    <string name="tool_01">气球</string>
    <string name="tool_02">点赞</string>
    <string name="tool_03">掌声</string>
    <string name="tool_04">黑板</string>
    <string name="tool_05">聚光灯</string>
    <string name="tool_06">放大镜</string>
    <string name="tool_07">背景音乐</string>
    <string name="tool_08">计时器</string>
    <string name="tool_09">下课</string>
    <string name="tool_10">竞赛</string>
    <string name="tool_13">纪律提醒</string>
    <string name="tool_14">安全提醒</string>
    <string name="tool_15">自定义</string>
    <string name="tool_16">搭建参考</string>
    <string name="tool_17">提问环节</string>
    <string name="menu_01">学科工具</string>
    <string name="menu_02">常用工具</string>
    <string name="menu_03">课堂提醒</string>
    <string name="menu_04">表扬鼓励</string>
    <string name="menu_05">画笔标注</string>
    <!--翻译V1.1-->
    <string name="change_01">是否切换为英文</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="change_02">中英文切换</string>


</resources>
