<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="PxUsage,RtlHardcoded,RtlSymmetry">

    <include layout="@layout/top_title_bar_05" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/ivHead"
        android:layout_width="@dimen/px_148"
        android:layout_height="@dimen/px_148"
        android:scaleType="centerCrop"
        android:src="@mipmap/dy_38"
        app:sriv_oval="true"
        tools:background="#fff" />


    <!--手机号+验证码-->
    <com.flyco.roundview.RoundLinearLayout
        android:id="@+id/layout01"
        style="@style/login_input_style"
        android:layout_marginTop="@dimen/px_54"
        app:rv_backgroundColor="#fff"
        app:rv_cornerRadius="@dimen/px_18">

        <TextView
            android:id="@+id/tvGetAreaCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="+86"
            android:textColor="#c8c8cb"
            android:textSize="@dimen/px_34" />

        <ImageView
            android:id="@+id/ivAreaChoose"
            android:layout_width="@dimen/px_60"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/px_14"
            android:src="@mipmap/unfold" />

        <EditText
            android:hint="请输入手机号"
            android:id="@+id/et01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:maxLength="30"
            android:paddingLeft="@dimen/px_10"
            android:singleLine="true"
            android:textColor="#404040"
            android:textSize="@dimen/px_34" />

    </com.flyco.roundview.RoundLinearLayout>


    <com.flyco.roundview.RoundLinearLayout
        android:id="@+id/layout02"
        style="@style/login_input_style"
        android:layout_marginTop="@dimen/px_54"
        app:rv_backgroundColor="#fff"
        app:rv_cornerRadius="@dimen/px_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login_05"
            android:textColor="#c8c8cb"
            android:textSize="@dimen/px_34" />

        <EditText
            android:hint="请输入验证码"
            android:id="@+id/et02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="@dimen/px_10"
            android:singleLine="true"
            android:textColor="#404040"
            android:textSize="@dimen/px_34" />
    </com.flyco.roundview.RoundLinearLayout>

    <RelativeLayout
        android:id="@+id/layout03"
        android:layout_width="@dimen/px_562"
        android:layout_height="@dimen/px_90"
        android:layout_marginTop="@dimen/px_24"
        android:layout_marginBottom="@dimen/px_24"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_60"
            android:gravity="center_vertical"
            android:text="@string/login_11"
            android:textColor="#4d4d4d"
            android:textSize="@dimen/px_30" />
    </RelativeLayout>
    <!--账号+密码-->


    <!--账号输入框-->
    <com.flyco.roundview.RoundLinearLayout
        android:id="@+id/layout04"
        style="@style/login_input_style"
        android:layout_marginTop="@dimen/px_54"
        app:rv_backgroundColor="#fff"
        app:rv_cornerRadius="@dimen/px_18">

        <TextView
            android:id="@+id/tvGetAreaCode2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="+86"
            android:textColor="#c8c8cb"
            android:textSize="@dimen/px_34" />

        <ImageView
            android:id="@+id/ivAreaChoose2"
            android:layout_width="@dimen/px_60"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/px_14"
            android:src="@mipmap/unfold" />

        <EditText
            android:hint="请输入账号"
            android:id="@+id/et04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:maxLength="30"
            android:paddingLeft="@dimen/px_10"
            android:singleLine="true"
            android:textColor="#404040"
            android:textSize="@dimen/px_34"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </com.flyco.roundview.RoundLinearLayout>

    <!--密码输入框-->
    <com.flyco.roundview.RoundLinearLayout
        android:id="@+id/layout05"
        style="@style/login_input_style"
        android:layout_marginTop="@dimen/px_54"
        app:rv_backgroundColor="#fff"
        app:rv_cornerRadius="@dimen/px_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login_03"
            android:textColor="#c8c8cb"
            android:textSize="@dimen/px_34" />

        <EditText
            android:hint="请输入密码"
            android:id="@+id/et05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="@dimen/px_10"
            android:singleLine="true"
            android:textColor="#404040"
            android:textSize="@dimen/px_34" />
    </com.flyco.roundview.RoundLinearLayout>

    <RelativeLayout
        android:id="@+id/layout06"
        android:layout_width="@dimen/px_680"
        android:layout_height="@dimen/px_90"
        android:layout_marginTop="@dimen/px_24"
        android:layout_marginBottom="@dimen/px_24"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/login_07"
            android:textColor="#4d4d4d"
            android:textSize="@dimen/px_30"
            android:theme="@style/My_CheckBox" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_60"
            android:gravity="center_vertical"
            android:text="@string/login_08"
            android:textColor="#4d4d4d"
            android:textSize="@dimen/px_30" />
    </RelativeLayout>


    <com.flyco.roundview.RoundTextView
        android:id="@+id/tvLogin"
        android:layout_width="@dimen/px_680"
        android:layout_height="@dimen/px_108"
        android:gravity="center"
        android:text="@string/login_12"
        android:textColor="#fff"
        android:textSize="@dimen/px_45"
        app:rv_backgroundColor="#FFDF00"
        app:rv_cornerRadius="@dimen/px_54" />


    <TextView
        android:id="@+id/tv07"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_80"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_09"
        android:textColor="#4d4d4d"
        android:textSize="@dimen/px_30" />

    <TextView
        android:id="@+id/tv08"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_80"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_10"
        android:textColor="#4d4d4d"
        android:textSize="@dimen/px_30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>